Update bind-keys for tmux kill commands

--- a/cli/tmux/.tmux.conf
+++ b/cli/tmux/.tmux.conf
@@ -40,6 +40,12 @@ bind-key f run-shell 'tmux popup -d #{pane_current_path} -w 80% -h 80% -E lazygi
 
 # TODO: bind-key o to run select-tmux-sessions
 
+# Kill server/session/window/pane
+bind-key Escape confirm-before -p "kill-server? (y/n)" kill-server
+bind-key X kill-session
+bind-key C-x kill-window
+bind-key x kill-pane
+
 # Split/Create windows
 bind-key v split-window -h -c "#{pane_current_path}"
 bind-key s split-window -c "#{pane_current_path}"
