Update tmux key binds

--- a/cli/tmux/.tmux.conf
+++ b/cli/tmux/.tmux.conf
@@ -41,8 +41,7 @@ bind-key f run-shell 'tmux popup -d #{pane_current_path} -w 80% -h 80% -E lazygi
 # TODO: bind-key o to run select-tmux-sessions
 
 # Kill server/session/window/pane
-bind-key Escape confirm-before -p "kill-server? (y/n)" kill-server
-bind-key X kill-session
+bind-key X confirm-before -p "kill-session? (y/n)" kill-session
 bind-key C-x kill-window
 bind-key x kill-pane
 
