Simplify tmux settings

--- a/cli/tmux/.tmux.conf
+++ b/cli/tmux/.tmux.conf
@@ -29,21 +29,19 @@ set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
 
 # Open popup
-bind-key p run-shell 'tmux setenv -g TMUX_LAST_DETECTED_SESSION #S; \
-    eval $(tmux showenv -gs TMUX_LAST_DETECTED_SESSION); \
-    [ "$TMUX_LAST_DETECTED_SESSION" = "popup" ] \
-    && tmux detach-client \
-    || tmux popup -E "tmux attach -t popup || tmux new -s popup"'
+bind-key p popup -E
+
+# Navigate through sessions
 unbind n
+bind-key n choose-tree -s
 
-bind-key f run-shell 'tmux popup -d #{pane_current_path} -w 80% -h 80% -E lazygit'
-
-# TODO: bind-key o to run select-tmux-sessions
+# Open lazygit
+bind-key f run-shell "tmux popup -d #{pane_current_path} -w 80% -h 80% -E lazygit"
 
 # Kill server/session/window/pane
-bind-key X confirm-before -p "kill-session? (y/n)" kill-session
-bind-key C-x kill-window
-bind-key x kill-pane
+unbind x
+bind-key Q kill-window
+bind-key q kill-pane
 
 # Split/Create windows
 bind-key v split-window -h -c "#{pane_current_path}"
@@ -76,3 +74,4 @@ bind-key -T copy-mode-vi y send -X copy-pipe "pbcopy"
 bind-key C-p paste-buffer
 
 source-file $DOTFILES/cli/tmux/.tmux.*.conf
+set-hook -g session-created 'run-shell "tmux source ~/.tmux/.tmux.#{session_name}.conf"'
