Add tms func to create/attach/switch tmux session

--- a/cli/tmux/.tmux.conf
+++ b/cli/tmux/.tmux.conf
@@ -39,6 +39,8 @@ bind-key n choose-tree -s
 # Open lazygit
 bind-key f run-shell "tmux popup -d #{pane_current_path} -w 80% -h 80% -E lazygit"
 
+# TODO: Run tms in popup
+
 # Kill server/session/window/pane
 unbind x
 bind-key Q kill-window
