Use GNU sed over BSD sed as default

--- a/cli/zsh/externals/brew/config
+++ b/cli/zsh/externals/brew/config
@@ -1,5 +1,6 @@
 # Environment Variables
 export PATH="/opt/homebrew/bin:$PATH"
+export PATH="/opt/homebrew/opt/gnu-sed/libexec/gnubin:$PATH"
 
 # Functions
 autoload -z $(dirname $0)/functions/*
