--- a/cli/brew/Brewfile
+++ b/cli/brew/Brewfile
@@ -67,6 +67,6 @@ cask "slack"
 cask "spotify"
 mas "EventScripts", id: 525319418
 mas "LINE", id: 539883307
-mas "TweetDeck", id: 485812721
+mas "Twitter", id: 1482454543
 mas "Vimari", id: 1480933944
 mas "Xcode", id: 497799835
