--- a/cli/brew/Brewfile
+++ b/cli/brew/Brewfile
@@ -41,7 +41,7 @@ brew "ripgrep"
 brew "ruby"
 brew "rustup"
 brew "svn"
-brew "tmux"
+brew "tmux", args: ["HEAD"]
 brew "trash"
 brew "tree"
 brew "vim"
