--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,5 +10,5 @@ jobs:
     timeout-minutes: 30
     steps:
       - name: Test
-        run: zsh -c "$(curl -fsSL dotfiles.oljfte.com)" && pwd && ls -al && zsh ./dotfiles/test/test.sh
+        run: zsh -c "$(curl -fsSL dotfiles.oljfte.com)" && zsh ./dotfiles/test/test.sh
         shell: /bin/zsh {0}
