--- a/cli/brew/Brewfile
+++ b/cli/brew/Brewfile
@@ -24,11 +24,12 @@ brew "git"
 brew "gnu-sed"
 brew "go"
 brew "grep"
+brew "imagemagick"
 brew "jq"
 brew "lazygit"
 brew "llvm"
 brew "mas"
-brew "neovim", args: ["HEAD"]
+brew "neovim"
 brew "node"
 brew "openblas"
 brew "perl"
@@ -41,7 +42,7 @@ brew "ripgrep"
 brew "ruby"
 brew "rustup"
 brew "svn"
-brew "tmux", args: ["HEAD"]
+brew "tmux"
 brew "trash"
 brew "tree"
 brew "vim"
