Fix wrong tilde

--- a/cli/zsh/externals/git/config
+++ b/cli/zsh/externals/git/config
@@ -1,6 +1,6 @@
 # Environment variables
 export GIT_EDITOR="nvim"
-export REPOSITORY_ROOT="~/repo"
+export REPOSITORY_ROOT="$HOME/repo"
 
 # Functions
 autoload -z $(dirname $0)/functions/*
