Add some formulae

--- a/cli/brew/Brewfile
+++ b/cli/brew/Brewfile
@@ -5,10 +5,12 @@ tap "homebrew/cask-versions"
 tap "homebrew/core"
 tap "homebrew/services"
 tap "keith/formulae"
+brew "age"
 brew "bat"
 brew "bazel"
 brew "python@3.10"
 brew "python@3.9"
+brew "cocoapods"
 brew "coreutils"
 brew "cowsay"
 brew "deno"
@@ -41,6 +43,7 @@ brew "rbenv"
 brew "ripgrep"
 brew "ruby"
 brew "rustup"
+brew "sops"
 brew "svn"
 brew "tmux"
 brew "trash"
@@ -54,7 +57,10 @@ brew "zsh-autosuggestions"
 brew "zsh-completions"
 brew "zsh-syntax-highlighting"
 cask "adobe-creative-cloud"
+cask "android-sdk"
+cask "android-studio"
 cask "appcleaner"
+cask "cocoapods"
 cask "cyberduck"
 cask "discord"
 cask "docker"
@@ -66,6 +72,7 @@ cask "google-cloud-sdk"
 cask "phoenix"
 cask "slack"
 cask "spotify"
+cask "visual-studio-code"
 mas "EventScripts", id: 525319418
 mas "LINE", id: 539883307
 mas "Twitter", id: 1482454543
