--- a/cli/tmux/.tmux.conf
+++ b/cli/tmux/.tmux.conf
@@ -36,8 +36,8 @@ unbind n
 unbind w
 bind-key n choose-tree -s
 
-# Open tig
-bind-key f run-shell "tmux popup -d #{pane_current_path} -w 80% -h 80% -E \"TERM=xterm-256color tig\""
+# Open lazygit
+bind-key f run-shell "tmux popup -d #{pane_current_path} -w 80% -h 80% -E lazygit"
 
 # TODO: Run tms in popup
 
