--- a/cli/brew/Brewfile
+++ b/cli/brew/Brewfile
@@ -69,6 +69,7 @@ cask "font-source-code-pro"
 cask "google-chrome"
 cask "google-cloud-sdk"
 cask "phoenix"
+cask "raycast"
 cask "slack"
 cask "spotify"
 cask "visual-studio-code"
