--- a/cli/brew/Brewfile
+++ b/cli/brew/Brewfile
@@ -35,7 +35,7 @@ brew "node"
 brew "openblas"
 brew "perl"
 brew "poetry"
-brew "postgresql"
+brew "postgresql@15"
 brew "prettier"
 brew "prototool"
 brew "ripgrep"
