--- a/cli/tmux/.tmux.conf
+++ b/cli/tmux/.tmux.conf
@@ -34,7 +34,7 @@ unbind w
 bind-key n choose-tree -s
 
 # Open lazygit
-bind-key f run-shell "tmux popup -d #{pane_current_path} -w 80% -h 80% -E lazygit"
+bind-key f run-shell "tmux popup -d #{pane_current_path} -w 80% -h 80% -E lazygit || true"
 
 # TODO: Run tms in popup
 
