Add bind-key for tms

--- a/cli/tmux/.tmux.conf
+++ b/cli/tmux/.tmux.conf
@@ -36,7 +36,8 @@ bind-key n choose-tree -s
 # Open lazygit
 bind-key f run-shell "tmux popup -d #{pane_current_path} -w 80% -h 80% -E lazygit || true"
 
-# TODO: Run tms in popup
+# Run tms
+bind-key p run-shell "zsh -ic tms"
 
 # Kill server/session/window/pane
 unbind x
