--- a/cli/zsh/externals/nvim/config
+++ b/cli/zsh/externals/nvim/config
@@ -5,7 +5,7 @@ bindkey "^?" backward-delete-char
 # Environment variables
 export EDITOR="nvim"
 
-# Functions
+# Function
 autoload -z $(dirname $0)/functions/*
 
 # ZLE
