--- a/cli/zsh/externals/brew/config
+++ b/cli/zsh/externals/brew/config
@@ -3,5 +3,5 @@ export PATH="/opt/homebrew/bin:$PATH"
 export PATH="/opt/homebrew/opt/coreutils/libexec/gnubin:$PATH"
 export PATH="/opt/homebrew/opt/gnu-sed/libexec/gnubin:$PATH"
 
-# Functions
+# Function
 autoload -z $(dirname $0)/functions/*
