--- a/cli/zsh/externals/fzf/config
+++ b/cli/zsh/externals/fzf/config
@@ -14,7 +14,7 @@ export FZF_CTRL_T_COMMAND=$FZF_DEFAULT_COMMAND
 export FZF_CTRL_T_OPTS="--preview 'bat {}'"
 export FZF_ALT_C_OPTS="--preview 'tree -C {} | head -200'"
 
-# Aliases
+# Aliase
 alias fzf="fzf-tmux -p 70%"
 
 # ZLE
