--- a/cli/zsh/externals/gcloud/config
+++ b/cli/zsh/externals/gcloud/config
@@ -1,5 +1,5 @@
 # Environment Variables
 export PATH="$PATH:$HOMEBREW_PREFIX/Caskroom/google-cloud-sdk/latest/google-cloud-sdk/bin"
 
-# Functions
+# Function
 autoload -z $(dirname $0)/functions/*
