Use singular form for section titles

--- a/cli/zsh/externals/gcloud/config
+++ b/cli/zsh/externals/gcloud/config
@@ -1,4 +1,4 @@
-# Environment Variables
+# Environment Variable
 export PATH="$PATH:$HOMEBREW_PREFIX/Caskroom/google-cloud-sdk/latest/google-cloud-sdk/bin"
 
 # Function
