--- a/cli/zsh/externals/brew/config
+++ b/cli/zsh/externals/brew/config
@@ -1,4 +1,4 @@
-# Environment Variables
+# Environment Variable
 export PATH="/opt/homebrew/bin:$PATH"
 export PATH="/opt/homebrew/opt/coreutils/libexec/gnubin:$PATH"
 export PATH="/opt/homebrew/opt/gnu-sed/libexec/gnubin:$PATH"
