--- a/cli/zsh/externals/fzf/config
+++ b/cli/zsh/externals/fzf/config
@@ -2,7 +2,7 @@
 source $HOMEBREW_PREFIX/opt/fzf/shell/completion.zsh
 source $HOMEBREW_PREFIX/opt/fzf/shell/key-bindings.zsh
 
-# Environment variables
+# Environment Variable
 export PATH="$HOMEBREW_PREFIX/opt/fzf/bin:$PATH"
 export FZF_TMUX=1
 export FZF_TMUX_OPTS='-p 70%'
