--- a/cli/zsh/externals/languages/python/config
+++ b/cli/zsh/externals/languages/python/config
@@ -1,4 +1,4 @@
-# Environment variables
+# Environment Variable
 export PYTHONDONTWRITEBYTECODE=1
 export PATH=$HOMEBREW_PREFIX/opt/python@3.9/libexec/bin:$PATH
 
