Clean up Brewfile

--- a/cli/brew/Brewfile
+++ b/cli/brew/Brewfile
@@ -1,19 +1,8 @@
-tap "homebrew/bundle"
-tap "homebrew/cask"
 tap "homebrew/cask-fonts"
-tap "homebrew/cask-versions"
-tap "homebrew/core"
-tap "homebrew/services"
-tap "keith/formulae"
 brew "age"
-brew "bat"
-brew "bazel"
-brew "python@3.10"
-brew "python@3.9"
+brew "python"
 brew "cocoapods"
 brew "coreutils"
-brew "cowsay"
-brew "deno"
 brew "eza"
 brew "fd"
 brew "jpeg"
@@ -56,12 +45,8 @@ brew "zsh-autosuggestions"
 brew "zsh-completions"
 brew "zsh-syntax-highlighting"
 cask "adobe-creative-cloud"
-cask "android-sdk"
-cask "android-studio"
 cask "appcleaner"
-cask "cocoapods"
 cask "cyberduck"
-cask "discord"
 cask "docker"
 cask "figma"
 cask "flutter"
@@ -74,7 +59,4 @@ cask "slack"
 cask "spotify"
 cask "visual-studio-code"
 mas "EventScripts", id: 525319418
-mas "LINE", id: 539883307
-mas "Twitter", id: 1482454543
-mas "Vimari", id: 1480933944
 mas "Xcode", id: 497799835
